Fixed horizontal overflow in mobile view

--- a/style.css
+++ b/style.css
@@ -396,7 +396,11 @@ body,html
 @media (max-width:500px)
 {
 
-    
+    #main
+    {
+        width: 100%;
+        overflow-x: hidden;
+    }
     
     
     
